# observatory

./: Cargo.toml  flake.nix
src/: args.rs  checks.rs  db.rs  main.rs  model.rs  paths.rs  schedule.rs
static/: index.html  index.js
