[package]
name = "observatory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.38", features=["serde"]}
clap = { version = "4.5.4", features = ["derive"] }
rocket = {version = "0.5.0", features = ["json"]}
rusqlite = {version="0.31.0", features=["chrono"]}
reqwest = { version = "0.12.4", features = [] }
ping-rs = "0.1.2"
systemstat = "0.2.3"
dns-lookup = "2.0.4"
